--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -1,4 +1,4 @@
-{% extends "dd_app/base.html" %}
+{% extends "app/base.html" %}
 {% block content %}
 {% for post in posts %}
             <h1>ABOUT PAGE</h1>
