--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,9 +1,9 @@
 {% extends "app/base.html" %}
 
-{% block left-content %}
+
     <h1>Login</h1>
-{% endblock left-content %}
-{% block right-content %}
+
+{% block main-content %}
   <form method="POST", action="{% url 'app-login' %}">
       {% csrf_token %}
     <label for="username"><b>Username</b></label>
@@ -15,4 +15,4 @@
     <button type="submit" name="" value="Login" action=>Login</button>
  </form>
 
-{% endblock right-content %}
+{% endblock main-content %}
