--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -1,6 +1,6 @@
 {% extends "app/base.html" %}
 
-{% block right-content %}
+{% block main-content %}
 <div class="container">
         <div class="jumbotron">
           {% if registered %}
@@ -18,4 +18,4 @@
           {% endif %}
         </div>
       </div>
-{% endblock right-content %}
+{% endblock main-content %}
