--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -3,10 +3,10 @@
 {% block main-content %}
 <!-- Left content -->
 
-    <div class="col-md-6 mySection myLeft">
+    <div class="col-md-6 myLeft">
         <h5 class="text-white">Select your ingredients and compose your drink!</h5>
 
-        <div class="row drinkPanel">
+        <div class="row roundedPanel mySection">
 
             <div class="col-md-9 ingredientsPanel">
                 <select class="browser-default custom-select mySelect">
@@ -15,7 +15,7 @@
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <button type="button" class="btn btn-outline-primary">+</button>
+                <button type="button" class="btn btn-warning">+</button>
                 <p>Ingredient...
                 <button type="button" class="btn">-</button>
                 </p>
@@ -25,8 +25,8 @@
             </div>
 
             <div class="col-md-3 buttonsPanel">
-                <button type="button" class="btn btn-success myButton">MAKE</button>
-                <button type="button" class="btn btn-success myButton">RESET</button>
+                <button type="button" class="btn myButton makeButton">MAKE</button>
+                <button type="button" class="btn myButton resetButton">RESET</button>
             </div>
         </div>
     </div>
@@ -36,15 +36,15 @@
 
 
 <!-- Right content -->
-<div class="col-md-4 mySection myRight">
+<div class="col-md-4 myRight">
 
-    <div class="aboutSection">
+    <div class="aboutSection mySection">
     <h6 class="text-white">Its an application for helping you make the best possible drink from
     the ingredients you have!</h6>
     <button type="button" class="btn btn-warning">Learn more</button>
         </div>
 
-    <div class="popularSection">
+    <div class="popularSection mySection">
     <h3 class="text-white">Most Popular Drinks</h3>
         </div>
 
