--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -1,18 +1,18 @@
 {% extends "app/base.html" %}
 
 {% block main-content %}
-<div class="container">
-        <div class="jumbotron">
+<div class="container mySection roundedPanel">
+        <div class="">
           {% if registered %}
-            <h1>Thank you for registering!</h1>
+            <h3 class="text-white">Thank you for registering!</h3>
           {% else %}
-            <h1>Register Here</h1>
+            <h3 class="text-white">Register Here</h3>
     
     <form enctype="multipart/form-data" method="POST">
               {% csrf_token %}
               {{ user_form.as_p }}
               {{ profile_form.as_p }}
-              <input type="submit" name="" value="Register">
+              <input type="submit" class="btn btn-warning" name="" value="Register">
             </form>
             
           {% endif %}
