JS for adding ingredients

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -3,6 +3,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- JS -->
+        <script src="{% static 'scripts/app.js' %}"></script>
+
         {% if title %}
             <title>{{  app_name  }} - {{ title }} </title>
         {% else %}
@@ -12,11 +15,7 @@
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="{% static 'styles/landing-page.css' %}">
         <link rel="stylesheet" href="{% static 'styles/creative.min.css' %}">
-
-        <!-- Font Awesome Icons -->
-        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
         <!-- Custom style -->
         <link rel="stylesheet" href="{% static 'styles/style.css' %}">
