--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -9,24 +9,31 @@
         <div class="row roundedPanel mySection">
 
             <div class="col-md-9 ingredientsPanel">
-                <select class="browser-default custom-select mySelect">
-                    <option selected>Open this select menu</option>
+                <select class="browser-default custom-select mySelect" id="selectIngredient">
+                        <option selected>Open this select menu</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
+
                 </select>
-                <button type="button" class="btn btn-warning">+</button>
-                <p>Ingredient...
-                <button type="button" class="btn">-</button>
-                </p>
-                <p>Ingredient...
-                <button type="button" class="btn">-</button>
-                </p>
+                <button type="button" class="btn btn-warning" onclick="addIngredient()">+</button>
+
+                <form id="ingredientForm" method="POST" action="{% url 'app-makeDrink' %}">
+                    {% csrf_token %}
+                    <!-- Ingredients list will be generated here -->
+                    <!-- tu od inputa zaczac -->
+
+                    <div id="IngredientList"></div>
+
+
+
             </div>
 
             <div class="col-md-3 buttonsPanel">
-                <button type="button" class="btn myButton makeButton">MAKE</button>
-                <button type="button" class="btn myButton resetButton">RESET</button>
+
+                    <button type="submit" class="btn myButton makeButton">MAKE</button>
+                </form>
+                <button type="button" class="btn myButton resetButton" onclick="resetIngredientList()">RESET</button>
             </div>
         </div>
     </div>
