--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -35,16 +35,24 @@
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">    
                     {# Some logic on what to display for last item#}
                     {% if user.is_authenticated %}
-                    <li><a> Logged as {{user.first_name}}</a></li>
-                      <li>
-                          <a href="{% url 'app-logout' %}">Logout</a>
-                      </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="{% url 'app-home' %}">Home </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="{% url 'app-profile' %}">See profile,{{user.first_name}}! </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="{% url 'app-profile_edition' %}"> Edit your profile </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="{% url 'app-logout' %}">  Logout </a>
+                    </li>
                     {% else %}
-                      <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger" href="{% url 'app-login' %}">Login</a></li>
-                      <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger" href="{% url 'app-register' %}">Sign up</a>
-                      </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="{% url 'app-login' %}">Login</a></li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="{% url 'app-register' %}">Sign up</a>
+                    </li>
                     {% endif %}                 
                 </ul>
               </div>
