--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,6 +2,7 @@
     background: url("../images/background2.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    min-height: 100%;
 }
 
 .mySection {
