--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -78,3 +78,12 @@
 .minusButton {
     margin-left: 20px;
 }
+
+.aboutAll {
+    background-color: rgba(240, 248, 255, 0.38);
+    padding: 15px;
+}
+
+.aboutParagraph {
+    margin: 8px;
+}
