--- a/app/templates/app/drink_ready.html
+++ b/app/templates/app/drink_ready.html
@@ -8,6 +8,9 @@
 
         <div class="row roundedPanel mySection">
 <h2>Drink name generated</h2>
+            {% for p in prepared_drinks%}
+            <p>{{ p }}</p>
+            {% endfor %}
 
             <div class="col-md-9 ingredientsPanel">
 
