--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -97,7 +97,7 @@
     <div class="aboutSection mySection roundedPanel">
         <h6 class="text-white">Its an application for helping you make the best possible drink from
             the ingredients you have!</h6>
-        <button type="button" class="btn btn-warning">Learn more</button>
+        <a href="{% url 'app-about' %}"><button type="button" class="btn btn-warning">Learn more</button></a>
     </div>
 
     <div class="popularSection mySection roundedPanel">
