--- a/app/templates/app/drink_ready.html
+++ b/app/templates/app/drink_ready.html
@@ -7,22 +7,33 @@
         <h5 class="text-white">Here's your drink!</h5>
 
         <div class="row roundedPanel mySection">
-<h2>Drink name generated</h2>
-            {% for p in prepared_drinks%}
-            <p>{{ p }}</p>
-            {% endfor %}
 
             <div class="col-md-9 ingredientsPanel">
 
-                <p>RATE: 3.72/5</p>
+                <h5 class="text-white">Your ingredients: </h5>
+                <p class="textIngredient">
+                    {% for i in ingredient_list %}
+                        {{ i }},
+                    {% endfor %}
+                </p>
+
+                <h5 class="text-white">Matched: </h5>
+                <p>
+                    <li class="textIngredient"> {{ prepared_drinks.ingredient1 }} </li>
+                    <li class="textIngredient"> {{ prepared_drinks.ingredient2 }} </li>
+                </p>
+
+
+
+                <h5 class="text-white">Advised Drink: </h5>
+                <h3 class="textIngredient">
+                    {{ prepared_drinks.drink1_name }}
+                </h3>
+                <p class="textIngredient">
+                     {{ prepared_drinks.drink1 }}
+                </p>
+                <p class="text-white">RATE: 3.72/5</p>
                 <form id="ingredientForm" method="POST" action="{% url 'app-makeDrink' %}">
-                    {% csrf_token %}
-                    <!-- Ingredients list will be generated here -->
-                    <!-- tu od inputa zaczac -->
-
-                    <div id="IngredientList"></div>
-
-
 
             </div>
 
@@ -44,14 +55,11 @@
 
     <div class="aboutSection mySection roundedPanel">
     <h2 class="text-white">Check also:</h2>
-        <h3>Drink #1</h3>
-        <h6>[Cola, vodka]</h6>
-
-        <h3>Drink #2</h3>
-        <h6>[Mango, juice]</h6>
-
-        <h3>Drink #3</h3>
-        <h6>[Rum, chocolate]</h6>
+        <h3 class="textIngredient">
+            {{ prepared_drinks.drink2_name }} </h3>
+                <p class="textIngredient">
+            {{ prepared_drinks.drink2 }}
+                </p>
     </div>
 
 
